--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "logar"
+        "Cadastrar",
+        "conteudo",
+        "Inicio",
+        "Logado",
+        "logar",
+        "Suportado"
     ]
 }
